修改所有的post接口，根据accessToken获取user_id和airportcode
