# guest-role/WebContent/swagger.json
@@ -58,11 +58,6 @@
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json;charset=utf8" ],
         "parameters" : [ {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
-        }, {
           "in" : "body",
           "name" : "body",
           "required" : false,
@@ -94,11 +89,6 @@
           "schema" : {
             "$ref" : "#/definitions/全局统一接受参数Long"
           }
-        }, {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
         } ],
         "responses" : {
           "200" : {
@@ -119,11 +109,6 @@
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json;charset=utf-8" ],
         "parameters" : [ {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
-        }, {
           "name" : "roleId",
           "in" : "query",
           "required" : false,
@@ -166,11 +151,6 @@
           "in" : "query",
           "required" : false,
           "type" : "string"
-        }, {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
         } ],
         "responses" : {
           "200" : {
@@ -196,12 +176,6 @@
         "operationId" : "menuTree",
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json;charset=utf-8" ],
-        "parameters" : [ {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
-        } ],
         "responses" : {
           "200" : {
             "description" : "请求成功",
@@ -258,11 +232,6 @@
           "required" : false,
           "type" : "integer",
           "format" : "int64"
-        }, {
-          "name" : "airportCode",
-          "in" : "query",
-          "required" : false,
-          "type" : "string"
         } ],
         "responses" : {
           "200" : {
@@ -288,10 +257,12 @@
           "type" : "integer",
           "format" : "int64"
         }, {
-          "name" : "airportCode",
-          "in" : "query",
+          "in" : "body",
+          "name" : "body",
           "required" : false,
-          "type" : "string"
+          "schema" : {
+            "$ref" : "#/definitions/ContainerRequestContext"
+          }
         }, {
           "name" : "menuId",
           "in" : "query",
@@ -317,6 +288,229 @@
     }
   },
   "definitions" : {
+    "ContainerRequestContext" : {
+      "type" : "object",
+      "properties" : {
+        "length" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "language" : {
+          "$ref" : "#/definitions/Locale"
+        },
+        "method" : {
+          "type" : "string"
+        },
+        "securityContext" : {
+          "$ref" : "#/definitions/SecurityContext"
+        },
+        "headers" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        },
+        "date" : {
+          "type" : "string",
+          "format" : "date-time"
+        },
+        "request" : {
+          "$ref" : "#/definitions/Request"
+        },
+        "propertyNames" : {
+          "type" : "array",
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "uriInfo" : {
+          "$ref" : "#/definitions/UriInfo"
+        },
+        "mediaType" : {
+          "$ref" : "#/definitions/MediaType"
+        },
+        "cookies" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "$ref" : "#/definitions/Cookie"
+          }
+        },
+        "entityStream" : {
+          "$ref" : "#/definitions/InputStream"
+        },
+        "acceptableLanguages" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/Locale"
+          }
+        },
+        "acceptableMediaTypes" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/MediaType"
+          }
+        }
+      }
+    },
+    "Cookie" : {
+      "type" : "object",
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        },
+        "value" : {
+          "type" : "string"
+        },
+        "version" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "path" : {
+          "type" : "string"
+        },
+        "domain" : {
+          "type" : "string"
+        }
+      }
+    },
+    "InputStream" : {
+      "type" : "object"
+    },
+    "Locale" : {
+      "type" : "object",
+      "properties" : {
+        "country" : {
+          "type" : "string"
+        },
+        "displayCountry" : {
+          "type" : "string"
+        },
+        "displayLanguage" : {
+          "type" : "string"
+        },
+        "displayName" : {
+          "type" : "string"
+        },
+        "displayScript" : {
+          "type" : "string"
+        },
+        "displayVariant" : {
+          "type" : "string"
+        },
+        "extensionKeys" : {
+          "type" : "array",
+          "uniqueItems" : true,
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "iso3Country" : {
+          "type" : "string"
+        },
+        "iso3Language" : {
+          "type" : "string"
+        },
+        "language" : {
+          "type" : "string"
+        },
+        "script" : {
+          "type" : "string"
+        },
+        "unicodeLocaleAttributes" : {
+          "type" : "array",
+          "uniqueItems" : true,
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "unicodeLocaleKeys" : {
+          "type" : "array",
+          "uniqueItems" : true,
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "variant" : {
+          "type" : "string"
+        }
+      }
+    },
+    "MediaType" : {
+      "type" : "object",
+      "properties" : {
+        "type" : {
+          "type" : "string"
+        },
+        "subtype" : {
+          "type" : "string"
+        },
+        "parameters" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "type" : "string"
+          }
+        },
+        "wildcardType" : {
+          "type" : "boolean",
+          "default" : false
+        },
+        "wildcardSubtype" : {
+          "type" : "boolean",
+          "default" : false
+        }
+      }
+    },
+    "PathSegment" : {
+      "type" : "object",
+      "properties" : {
+        "path" : {
+          "type" : "string"
+        },
+        "matrixParameters" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }
+      }
+    },
+    "Principal" : {
+      "type" : "object",
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Request" : {
+      "type" : "object",
+      "properties" : {
+        "method" : {
+          "type" : "string"
+        }
+      }
+    },
+    "SecurityContext" : {
+      "type" : "object",
+      "properties" : {
+        "userPrincipal" : {
+          "$ref" : "#/definitions/Principal"
+        },
+        "secure" : {
+          "type" : "boolean",
+          "default" : false
+        },
+        "authenticationScheme" : {
+          "type" : "string"
+        }
+      }
+    },
     "SysMenu" : {
       "type" : "object",
       "required" : [ "airportCode", "name" ],
@@ -443,6 +637,74 @@
         }
       },
       "description" : "sys_role"
+    },
+    "UriBuilder" : {
+      "type" : "object"
+    },
+    "UriInfo" : {
+      "type" : "object",
+      "properties" : {
+        "absolutePath" : {
+          "type" : "string",
+          "format" : "uri"
+        },
+        "path" : {
+          "type" : "string"
+        },
+        "pathSegments" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/PathSegment"
+          }
+        },
+        "matchedURIs" : {
+          "type" : "array",
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "requestUri" : {
+          "type" : "string",
+          "format" : "uri"
+        },
+        "baseUri" : {
+          "type" : "string",
+          "format" : "uri"
+        },
+        "queryParameters" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        },
+        "baseUriBuilder" : {
+          "$ref" : "#/definitions/UriBuilder"
+        },
+        "pathParameters" : {
+          "type" : "object",
+          "additionalProperties" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        },
+        "matchedResources" : {
+          "type" : "array",
+          "items" : {
+            "type" : "object"
+          }
+        },
+        "absolutePathBuilder" : {
+          "$ref" : "#/definitions/UriBuilder"
+        },
+        "requestUriBuilder" : {
+          "$ref" : "#/definitions/UriBuilder"
+        }
+      }
     },
     "全局统一接受参数Long" : {
       "type" : "object",
